--- a/style.css
+++ b/style.css
@@ -1,31 +1,44 @@
-:root{
-    background-color: black;
-    --main-box-background:gray;
-}
-
-
-html, body {
-    height: 100%;
+:root {
+  --main-box-background: #242526;
 }
 body {
-    margin: 0;
-}
-.flex-container-main {
-    height: 100%;
-    padding: 0;
-    margin: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.links {
-    display: flex;
-    width: auto;
-    background-color: var(--main-box-background);
+  background-color: black;
 }
 
-.link1, .link2{
-    display: flex;
-    flex-direction: column;
-    color: white;
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+}
+.flex-container-main {
+  height: 100%;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.links {
+  display: flex;
+  width: auto;
+  background-color: var(--main-box-background);
+  font-size: 1.3rem;
+  padding: 0.5rem;
+}
+.link1,
+.link2 {
+  display: flex;
+  flex-direction: column;
+  color: white;
+  padding-right: 0.7rem;
+}
+.links a {
+  padding: 0.4rem;
+  color: wheat;
+  text-decoration: none;
+}
+.link1 {
+  padding-left: 1rem;
 }
