--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,248 +1,177 @@
-:root {
-  --v1: #be91c6;
-  --v2: #8a65cc;
-  --v3: #5e30d9;
-  --transparentv3: #5e30d900;
-  --v4: #3b1895;
-  --s1: #fea798;
-  --s2: #ff846e;
-  --cloud: #fea798;
-}
+@import url("https://fonts.googleapis.com/css2?family=Unica+One&display=swap");
+/* font-family: 'Unica One', cursive; */
+
+@import url("https://fonts.googleapis.com/css2?family=Life+Savers:wght@700&display=swap");
+/* font-family: 'Life Savers', cursive; */
+
 body {
   padding: 0;
   margin: 0;
 }
-.landscape {
+:root {
+  --transition-speed: 600ms;
+  --arrows-color: wheat;
+  --txt-secondary: color: #df49a6;
+  --marks-color:#00ffff;
+  --clock-dark: rgba(0, 0, 0, 0.288);
+  --clock-main-color:rgb(224, 211, 224);
+  --bookmark-backgroud-color:#061e23;
+  --bookmark-button-background-color:#0a3842;
+  --bookmark-yellow-color:#ffa000;
+}
+#welcome {
+  width: 100%;
   height: 100vh;
-  background-image: linear-gradient(var(--v1), var(--s1), var(--v1));
-  position: relative;
-  /* z-index: 1; */
-  overflow: hidden;
+  background-color: black;
+  background: linear-gradient(to top, #3204fd6b, #9804fa6c), url("../../assets/imgs/ezgif.com-gif-maker\ \(28\).gif") no-repeat top center;
+  /* background: linear-gradient(to top, #3204fd21, #9804fa2c), url("../../assets/imgs/ezgif.com-gif-maker\ \(28\).gif") no-repeat top center; */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
-.landscape:after,
-.landscape:before,
-.landscape *,
-.landscape *:after,
-.landscape *:before {
-  position: absolute;
-}
-.sun-container {
-  overflow: hidden;
-  width: 100%;
-  height: 50%;
-}
-
-/* .sun-container-1:after {
-  content: "";
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  background: radial-gradient(circle at 60% 100%, var(--s2), transparent);
-  animation: fade 20s infinite;
-  mix-blend-mode: color-burn;
-} */
-/* .sun-container-reflection {
-  top: 50%;
-  background: radial-gradient(circle at 60% 0%, var(--s2), transparent);
-} */
-.sun-container-reflection .sun {
-  background: linear-gradient(white, rgba(131, 21, 21, 0));
-  box-shadow: none;
-  filter: blur(5px);
-  opacity: 1;
-  top: 0;
-  transform: translate3d(0, -20vmin, 0);
-  animation-name: rise-reflection;
-}
-.sun-container-1:after {
-  content: "";
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  background: radial-gradient(circle at 60% 100%, var(--s2), transparent);
-  /* animation: fade 20s infinite; */
-  mix-blend-mode: color-burn;
-}
-.sun {
-  background: white;
-  border-radius: 50%;
-  width: 20vmin;
-  height: 20vmin;
-  left: 45%;
-  top: 100%;
-  /* transform: translate3d(0, 0, 0); */
-  animation: rise 20s infinite;
-  box-shadow: 0 0 10px white;
-}
-.moon {
-  top: 100%;
-  width: 90px;
-  height: 90px;
-  border-radius: 50%;
-  left: 48.5%;
-  transform: rotate(-50deg);
-  /* I set 2 shadows where the first one doesn't have blur and spread for firefox fix. */
-  box-shadow: inset 0px 16px rgb(255, 255, 255),
-    inset 0px 16px 1px 1px rgb(255, 255, 255);
-  -moz-box-shadow: inset 0px 16px rgb(255, 255, 255),
-    inset 0px 16px 1px 1px #999;
-}
-.navbar-icons-container {
-  height: 2.5rem;
-  width: 100%;
-  position: absolute;
-  bottom: 0;
+.container {
   display: flex;
-  justify-content: center;
-  align-items: flex-end;
-}
-.navbar-home-link-block {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
   align-items: center;
 }
-.navbar-home-link-block img {
-  width: 50px;
-  height: 50px;
+.arrow-container {
+  width: 5rem;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: var(--transition-speed);
+}
+.arrows {
+  display: none;
+}
+.mid-container {
+  width: 100%;
+  display: flex;
+  justify-content: flex-end;
+   font-family: "Unica One", cursive;
+  font-size: 3rem;
+  color: var(--clock-main-color);
+}
+.clock{
+    display: flex;
+    /* border-bottom: .2rem solid var(--clock-main-color);
+    padding-bottom: .2rem; */
+}
+.marks{
+    color: var(--marks-color);
+    padding-left: 0.4rem;
+    padding-right: .4rem;
+}
+#weekday{
+    padding-left: 1rem;
+}
+.clock-dark{
+    color: var(--clock-dark);
 }
 
-.main-home-container {
-  position: absolute;
-  width: 100%;
-  height: 75%;
-  top: 17%;
-  display: flex;
-  justify-content: center;
-  flex-direction: row;
+.arrow-container:hover .arrows {
+  display: block;
+  font-size: 4rem;
+  color: var(--arrows-color);
 }
-.home-info-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 40rem;
-  border-radius: 10px;
+
+.arrow-container:hover {
   background-color: rgba(0, 0, 0, 0.3);
   backdrop-filter: blur(5px);
-}
-.navbar-home-link-img-Rectangular {
-  display: inline-block;
-  position: relative;
-  width: 180px;
-  height: 180px;
-  overflow: hidden;
-  border-radius: 50%;
-  margin-top: 2.5rem;
-}
-.navbar-home-link-img-Rectangular img {
-  width: auto;
-  height: 100%;
-  margin-left: -50px;
-}
-.Square {
-  border-radius: 50%;
-  width: 180px;
-  height: 180px;
-  margin-top: 2.5rem;
+  transition: var(--transition-speed);
 }
 
-.navbar-home-link-img-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  width: 40rem;
-  border-radius: 10px;
-  background-color: rgba(0, 0, 0, 0.3);
-  backdrop-filter: blur(5px);
+/* !bookmarks */
+.bookmarks{
+    display: flex;
+    width: 100%;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--bookmark-backgroud-color);
+    font-family: 'Life Savers', cursive;
+    transition: var(--transition-speed);
 }
-
-.icon {
-  align-items: center;
-  display: flex;
-  padding-bottom: 0.4rem;
-  padding-top: 0.6rem;
-}
-.navbar-icons {
-  display: flex;
-  justify-content: space-evenly;
-  font-size: 2.3rem;
-  border-radius: 25px 25px 0 0;
-  min-width: 20rem;
-  background-color: rgba(0, 0, 0, 0.3);
-
-  backdrop-filter: blur(5px);
-}
-.home-img-container {
-  width: 100%;
-  height: 38.5%;
-  display: flex;
-  justify-content: center;
-}
-.home-lings-container {
-  width: 100%;
-  height: 61.5%;
-  display: grid;
-  grid-template-columns: repeat(3, calc(100% / 3));
-  grid-template-rows: repeat(4, calc(100% / 4));
-}
-.home-grid-item {
-  font-size: 1.25rem;
-  text-align: center;
-  justify-items: center;
-  align-items: center;
-}
-.home-grid-item a {
-  text-decoration: none;
-  color: wheat;
-}
-.navbar-icons .iconify {
-}
-
-/* @keyframes rise {
-  100% {
-    transform: translate3d(0, -100vh, 20vmin);
-  }
+/* .bookmarks-layout{
+    transition: opacity 1s ease-out;
 } */
-@keyframes rise-reflection {
-  30% {
+.NOdisplay {
+    transition: opacity 1s ease-out;
     opacity: 0;
-    transform: translate3d(0, 5vmin, 0);
-  }
-  100% {
-    opacity: 0;
-    transform: translate3d(0, 80vmin, 0);
-  }
 }
-@keyframes fade {
-  10% {
+.display {
     opacity: 1;
-  }
-  30%,
-  70% {
-    opacity: 0;
-  }
 }
-@media only screen and (max-width: 600px) {
-  .main-home-container {
-    top: 0%;
-    height: 90%;
+.bookmark-container{
+    display: flex;
+    flex-direction: column;
+    width: 63%;
+}
+.bookmark-icons{
+    width: 100%;
+    display: flex;
+}
+.bookmark-button{
+    color: var(--arrows-color);
+    font-size: 1.5rem;
+    padding-left: 1.25rem;
+    padding-right: 1.25rem;
+    padding-bottom: .5rem;
+    padding-top: .5rem;
+    background-color: var(--bookmark-button-background-color);
+    border-radius: 6px;
+    margin-right: .8rem;
+}
+.bookmark-grid-container {
+    display: grid;
+    grid-template-columns: auto auto;
+    padding-top: .7rem;
+    column-gap: 10px;
+    row-gap: 15px;
   }
-  body {
-    overflow: hidden;
+  .bookmark-grid-item {
+    background-color: var(--bookmark-button-background-color);
+    padding: 20px;
+    font-size: 1.5rem;
+    text-align:  left;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
   }
-  .home-grid-item {
-    font-size: 1rem;
+  #bookmark-home-icon{
+      color: var(--arrows-color);
   }
-  .navbar-home-link-block img {
-    width: 40px;
-    height: 40px;
+  .bookmark-title{
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      height: 2rem;
+      font-size: 1.3rem;
   }
-  .Square {
-    margin: 1rem;
+.bookmark-title-colored{
+    color: var(--bookmark-yellow-color);
+    padding-right: .5rem;
+}
+.bookmark-full-title{
+    text-decoration: none;
+    color: var(--arrows-color);
+}
+#bookmark-back-icon{
+    animation: backBTN 2s linear infinite alternate;
+
+}
+@keyframes backBTN {
+    100%   {color: var(--bookmark-yellow-color);}
+    50%  {color: var(--arrows-color);}
   }
-  .moon {
-    left: 41%;
-  }
+.bookmark-clock{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: var(--arrows-color);
+    font-size: 2rem;
+    padding-left: 1rem;
+}
+.yellow{
+    color: var(--bookmark-yellow-color);
 }
